--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -215,3 +215,20 @@ body {
   cursor: pointer;
   color: rgba(252, 2, 2, 0.671);
 }
+
+.open-row-1 {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.295);
+}
+
+.open-search-main {
+  width: 40%;
+  height: 50px;
+  border-radius: 30px;
+  background-color: rgb(161, 154, 154);
+  /* border: 1px solid white; */
+}
