--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,234 +1,163 @@
-body {
-  /* background: rgb(43, 43, 43); */
-  overflow: hidden;
-  /* position: relative; */
-}
-
 .app-main {
-  /* border: 2px solid white; */
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center ;
   height: 100vh;
-}
-
-.side-menu-main {
-  background: rgb(29, 29, 29);
-  width: 50px;
-  height: 100vh;
-  box-shadow: 0 0 8px 5px rgb(36, 35, 35);
-}
-
-.side-icon {
-  /* border: 1px solid white; */
-  height: 45px;
-  color: white;
+  background-color: rgb(31, 31, 31);
   display: flex;
   align-items: center;
   justify-content: center;
-  /* z-index: 999; */
-  transition: ease-in-out .2s;
+  /* border: 2px solid black; */
 }
 
-.side-icon:hover {
-  background: rgba(173, 173, 173, 0.205);
-  cursor: pointer;
-}
-
-.bottom-side-icon {
+.model-menu {
+  width: 35%;
+  height: 80vh;
+  border-radius: 10px;
+  background-color: rgb(22, 22, 22);
   /* border: 1px solid white; */
-  height: 45px;
-  width: 50px;
-  position: absolute;
+  margin: 10px;
+}
+
+.model-builder {
+  width: 65%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
-  bottom: 0px;
-  transition: ease-in-out .2s;
+  /* border: 1px solid white; */
 }
 
-.bottom-side-icon:hover {
-  background: rgba(173, 173, 173, 0.205);
-  cursor: pointer;
-}
-
-.floating-conf-menu {
-  /* border: 3px solid white; */
-  width: 300px;
-  height: 75%;
-  border-radius: 20px;
-  position: absolute;
-  top: 30px;
+.floating-btn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: rgb(12, 122, 224);
+  position: fixed;
+  bottom: 20px;
   right: 20px;
-  /* z-index: 999; */
-  box-shadow: 0 0 8px 5px rgb(36, 35, 35);
-  background: rgb(24, 24, 24);
+  color: white;
+  transition: background-color ease-in-out .3s, 
+  transform ease-in-out .3s ;
 }
 
-.floating-menu-main {
-  background: rgb(29, 29, 29);
-  box-shadow: 0 1px 5px 2px rgb(24, 24, 24);
-  width: 570px;
-  height: 55px;
+.search-panel { 
+  width: 340px;
+  height: 45px;
+  background-color: rgb(112, 112, 112);
+  border-radius: 10px;
+  position: fixed;
+  top: -90px;
+  right: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform ease-out .3s, 
+              height ease-in-out .3s;;
+}
+
+.search-container {
+  width: 100%;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(90, 90, 90);
+  border-radius: 10px;
   position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  bottom: 5%;
-  right: 5%;
-  z-index: 99;
-  border-radius: 30px;
-}
-
-.dragger {
-  /* border: 1px solid white; */
-  color: rgba(255, 255, 255, 0.274);
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  width: 30px;
-  margin-left: 10px;
-  height: 30px;
-  z-index: 1000;
-  transition: ease-in-out .2s;
-}
-
-.dragger-conf {
-  border: 1px solid white;
-  width: 10px;
-  height: 20px;
-}
-
-.dragger:hover {
-  cursor: move;
-  color: white;
-}
-
-.floating-menu-main button {
-  width: 70px;
-  margin-left: 5px;
-  /* margin-top: 2px; */
-  /* margin-right: 10px; */
-  height: 85%;
-  outline: none;
-  border: none;
-  border-radius: 60px;
-  color: white;
-  font-size: 180%;
-  background: rgb(71, 184, 236);
-}
-
-.search-main {
-  width: 300px;
-  height: 85%;
-  margin-left: 5px;
-  margin-right: 3px;
-  /* margin-top: 4px; */
-  border-radius: 30px;
-  background: gray;
-  font-size: 180%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.search-box {
-  /* border: 1px solid white; */
-  width: 85%;
-  height: 100%;
+  top: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.068);
 }
 
 .search-icon {
-  /* border: 1px solid white; */
+  width: 20%;
   height: 100%;
+  /* border: 1px solid white; */
   color: white;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  width: 15%;
-}
-
-.overlay-page-main {
-  background: rgb(29, 29, 29);
-  box-shadow: 0 1px 5px 2px rgb(24, 24, 24);
-  width: 90%;
-  height: 92%;
-  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
-  top: 4%;
-  left: 60px;
-  z-index: 9999;
-  border-radius: 30px;
 }
 
-.compile-main {
-  width: 90%;
-  height: 200px;
-  /* border: 1px solid white; */
-  position: absolute;
-  top: 30%;
-  border-radius: 20px;
-  background-color: rgb(112, 112, 112);
-  box-shadow: 0 1px 5px 2px rgb(24, 24, 24);
-  left: 5%;
-}
-
-.main-main {
-  width: 97%;
-  height: 100vh;
-  position: relative;
-  background-image: radial-gradient(#ffffff13 20%, transparent 20%), radial-gradient(rgba(255, 255, 255, 0.007) 20%, transparent 20%);
-  background-color: rgb(56, 56, 56);
-  background-position: 0 0, 20px 20px;
-  background-size: 10px 10px;
-  /* border: 1px solid rgb(151, 21, 21); */
-}
-
-.open-main {
-  width: 97%;
-  height: 100vh;
-  position: relative;
-  /* background-image: radial-gradient(#ffffff13 20%, transparent 20%), radial-gradient(rgba(255, 255, 255, 0.007) 20%, transparent 20%); */
-  background-color: rgb(56, 56, 56);
-  /* background-position: 0 0, 20px 20px; */
-  /* background-size: 10px 10px; */
-  /* border: 1px solid rgb(151, 21, 21); */
-}
-
-.open-main h1 {
-  color: white;
-}
-
-.cancel-btn {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  color: white;
+.search-input {
+  width: 70%;
+  height: 100%;
   /* border: 1px solid white; */
 }
 
-.cancel-btn:hover {
-  cursor: pointer;
-  color: rgba(252, 2, 2, 0.671);
-}
-
-.open-row-1 {
+.search-input input {
   width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: center;
+  height: 100%;
   align-items: center;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.295);
+  justify-content: center;
+  color: white;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 110%;
 }
 
-.open-search-main {
-  width: 40%;
+.search-input input::placeholder {
+  color: rgb(163, 163, 163);
+}
+
+.data-block {
+  width: 200px;
   height: 50px;
-  border-radius: 30px;
-  background-color: rgb(161, 154, 154);
-  /* border: 1px solid white; */
+  border-radius: 10px;
+  background-color: rgb(53, 53, 53);
+  position: relative;
+  transition: all ease-in-out .3s;
+}
+
+.data-block:hover > .connector {
+  width: 30px;
+  height: 30px;
+  bottom: -15px;
+  background-color: rgb(235, 145, 12);
+  transition: all ease-in-out .1s;
+}
+
+.data-block:hover > .connector * {
+  visibility: visible;
+  transition: visibility ease-in-out .5s;
+}
+
+.data-block:hover {
+  background-color: rgb(78, 78, 78);
+  transition: all ease-in-out .3s;
+}
+
+.connector {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: rgb(116, 116, 116);
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all ease-in-out .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.connector * {
+  visibility: hidden;
+}
+
+.cancel {
+  width: 10%;
+  height: 100%;
+  color: rgb(223, 223, 223);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: color ease-in-out .1s;
+}
+
+.cancel:hover {
+  color: white;
+  transition: color ease-in-out .1s;
 }
