--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,62 @@
   background-color: rgb(22, 22, 22);
   /* border: 1px solid white; */
   margin: 10px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.model-menu .option {
+  margin: 15px;
+  width: 90%;
+  height: 35px;
+  border-radius: 5px;
+  background-color: rgb(94, 94, 94);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.option .o-col1 {
+  width: 85%;
+  height: 100%;
+}
+
+.option .o-col1 input {
+  width: 95%;
+  margin-left: 5%;
+  height: 95%;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: #ececec;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.option .o-col1 input::placeholder {
+  color: #ececec;
+}
+
+.option .o-col2 {
+  width: 15%;
+  height: 100%;
+  /* border: 1px solid white; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(218, 218, 218);
+  background-color: rgb(126, 126, 126);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.option .o-col2:hover {
+  background-color: rgb(156, 156, 156);
+}
+
+.hr {
+  width: 100%;
+  height: 1px;
+  background-color: #a3a3a30c;
 }
 
 .model-builder {
@@ -107,6 +163,13 @@
   background-color: rgb(53, 53, 53);
   position: relative;
   transition: all ease-in-out .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.data-block:active {
+  border: 3px solid rgb(0, 153, 255);
 }
 
 .data-block:hover > .connector {
@@ -161,3 +224,30 @@
   color: white;
   transition: color ease-in-out .1s;
 }
+
+.db-col1{
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #c5c5c5;
+}
+
+.db-col2 {
+  width: 80%;
+  height: 100%;
+}
+
+.db-col2 input {
+  width: 90%;
+  height: 90%;
+  text-align: center;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: #c5c5c5;
+  font-size: 110%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
