--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+:root{
+  --border-highlight: rgb(0, 153, 255);
+}
+
 .app-main {
   width: 100%;
   height: 100vh;
@@ -20,7 +24,7 @@
 }
 
 .model-menu .option {
-  margin: 15px;
+  margin: 15px 15px 5px 15px;
   width: 90%;
   height: 35px;
   border-radius: 5px;
@@ -169,7 +173,7 @@
 }
 
 .data-block:active {
-  border: 3px solid rgb(0, 153, 255);
+  border: 3px solid var(--border-highlight);
 }
 
 .data-block:hover > .connector {
@@ -251,3 +255,11 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.footer {
+  width: 100%;
+  height: 20px;
+  background-color: var(--border-highlight);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
