--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
 
 .app-main {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(31, 31, 31);
   display: flex;
   align-items: center;
@@ -18,7 +18,7 @@
   border-radius: 10px;
   background-color: rgb(22, 22, 22);
   /* border: 1px solid white; */
-  margin: 10px;
+  margin: 10px 10px 10vh 10px;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -262,4 +262,25 @@
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+.template {
+  width: 60px;
+  height: 100%;
+  color: white;
+  /* border: 1px solid white; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.template * {
+  margin-top: 8px;
+  font-size: 70%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.template:hover {
+  background-color: rgb(2, 139, 230);
+  cursor: pointer;
 }
